--- a/Download.html
+++ b/Download.html
@@ -19,10 +19,10 @@
 <body>
 
 <header>
-<h1 id="logo"><a href="index.html"><img src="images/app_icon_0.png" witdh=20 height=20 alt="SAMPLE COMPANY"></a></h1>
+<h1 id="logo">Download</a></h1>
 <nav id="menubar">
 <ul>
-<li><a href="./index.html">COMPANY</a></li>
+<li><a href="./index.html">HOME</a></li>
 <li><a href="./link.html">LINK</a></li>
 </ul>
 </nav>
@@ -42,32 +42,32 @@
 <th><a href="./addon/touhou_Little_V.1_.mcaddon" download="touhouLittleMADE.mcaddon">Download</a></th>
 </tr>
 <tr>
-<th><a href="#">サイト名</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+<th>no</th>
+<td>NO_file</td>
 </tr>
 <tr>
-<th><a href="#">サイト名</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+<th>no</th>
+<td>NO_file</td>
 </tr>
 <tr>
-<th><a href="#">サイト名</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+<th>no</th>
+<td>NO_file</td>
 </tr>
 <tr>
-<th><a href="#">サイト名</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+<th>no</th>
+<td>NO_file</td>
 </tr>
 <tr>
-<th><a href="#">サイト名</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+<th>no</th>
+<td>NO_file</td>
 </tr>
 <tr>
-<th><a href="#">サイト名</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+<th>no</th>
+<td>NO_file</td>
 </tr>
 <tr>
-<th><a href="#">サイト名</a></th>
-<td>ここに説明など入れて下さい。サンプルテキスト。</td>
+<th>no</th>
+<td>NO_file</td>
 </tr>
 </table>
 
