--- a/Link.html
+++ b/Link.html
@@ -42,8 +42,7 @@
 <div class="pack_flame">
 <img src="images/Amber.png" witdh=80 height=80>
 <div class="text_content">
-<span class="pack_name"><a href="https://www.pixiv.net/artworks/74665829"><sama>アバンドン蘭花様</sama></a></span><br>
-博麗霊夢のイラストをホームで使わせてもらっております。
+<span class="pack_name"><a href="https://www.pixiv.net/artworks/74665829"><sama>アバンドン蘭花様</sama></a></span><br>東方のイラストをホームや参加者一覧などで使わせてもらっております。
 </div>
 </div>
 
