--- a/Link.html
+++ b/Link.html
@@ -37,7 +37,7 @@
 
 <span class="header_text">このサイトにはなに？</span>
 </h2>
-<p>このサイトはLinkサイトです。お借りしたもの記載そして私よリンクなどに使われます。</p>
+<p>このサイトはLinkサイトです。お借りしたもの記載やリンクなどに使われます。</p>
 
 <div class="pack_flame">
 <img src="images/Amber.png" witdh=80 height=80>
