--- a/Link.html
+++ b/Link.html
@@ -42,7 +42,14 @@
 <div class="pack_flame">
 <img src="images/Amber.png" witdh=80 height=80>
 <div class="text_content">
-<span class="pack_name"><a href="https://www.pixiv.net/artworks/74665829"><sama>アバンドン蘭花様</sama></a></span><br>東方のイラストをホームや参加者一覧などで使わせてもらっております。
+<span class="pack_name"><a href="https://www.pixiv.net/artworks/74665829"><sama>アバンドン蘭花 様</sama></a></span><br>東方のイラストをホームや参加者一覧などで使わせてもらっております。
+</div>
+</div>
+
+<div class="pack_flame">
+<img src="images/Amber.png" witdh=80 height=80>
+<div class="text_content">
+<span class="pack_name"><a href="https://www.pixiv.net/users/2179695/illustrations"><sama>羽々斬 様</sama></a></span><br>東方のイラストを使わせてもらっております。
 </div>
 </div>
 
@@ -54,7 +61,6 @@
 このサイトから動く背景はお借りしております。
 </div>
 </div>
-
 
 
 
