--- a/Link.html
+++ b/Link.html
@@ -47,7 +47,7 @@
 </div>
 
 <div class="pack_flame">
-<img src="images/Amber.png" witdh=80 height=80>
+<img src="https://i.pximg.net/user-profile/img/2022/10/16/22/14/07/23472947_991f7d68920d8e2c8aaef086570c35a2_170.png" witdh=80 height=80>
 <div class="text_content">
 <span class="pack_name"><a href="https://www.pixiv.net/users/2179695/illustrations"><sama>羽々斬 様</sama></a></span><br>東方のイラストを使わせてもらっております。
 </div>
