--- a/osirase.html
+++ b/osirase.html
@@ -17,26 +17,23 @@
 
 <ul class="accordion-area">
 <h2>お知らせまたはアプデ内容</h2>
+
 <li>
 <section>
-
+<h3 class="title">2023/01/01</h3>
+<div class="box">
+<p>新しくサイトを作成して2023/08/17に公開</p>
+</div>
+</section>
+</li>
+<li>
+<section>
 <h3 class="title">2023/09/01</h3>
 <div class="box">
 <p>東方リトルメイドMOD再現アドオンを配布しております。12体ぐらいいるのですが入手などがアプデが必須になりました。次回までお楽しみに</p>
 </div>
 </section>
 </li>
-
-
-<li>
-<section>
-<h3 class="title">2023/01/01<h3>
-<div class="box">
-<p>新しくサイトを作成して2023/08/17に公開 </p>
-</div>
-</section>
-</li>
-
 </ul>
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
