--- a/Sanka.html
+++ b/Sanka.html
@@ -30,7 +30,7 @@
 <nav>
 <ul>
 <li><a href="./index.html"><color>ホーム</color></a></li>
-<li><a href="./Sanka/ikaringu.html"><color>Ikaringu様</color></a></li>
+<li><a href="./Sanka/Ikaringu.html"><color>Ikaringu様</color></a></li>
 <li><a href="./Sanka/Yuka0745.html"><color>Yuka0745様</color></a></li>
 <li><a href="./Sanka/ham.html"><color>ham様</color></a></li>
 </ul>
