--- a/Link.html
+++ b/Link.html
@@ -52,7 +52,15 @@
 <span class="pack_name"><a href="https://www.pixiv.net/users/2179695/illustrations"><sama>羽々斬 様</sama></a></span><br>東方のイラストを使わせてもらっております。
 </div>
 </div>
+  
+<div class="pack_flame">
+<img src="https://raw.githubusercontent.com/akaina0809/Test_2/main/23472947_991f7d68920d8e2c8aaef086570c35a2_170.png" witdh=80 height=80>
+<div class="text_content">
+<span class="pack_name"><a href="https://yuuram255.booth.pm/items/4031952"><sama>yuuram255 様</sama></a></span><br>霊夢/魔理沙の立ち絵をお借りしております。
+</div>
+</div>
 
+  
 <div class="pack_flame">
 <img src="GIF/movie.gif" witdh=80 height=80>
 <div class="text_content">
