--- a/Link.html
+++ b/Link.html
@@ -54,7 +54,7 @@
 </div>
   
 <div class="pack_flame">
-<img src="https://raw.githubusercontent.com/akaina0809/Test_2/main/23472947_991f7d68920d8e2c8aaef086570c35a2_170.png" witdh=80 height=80>
+<img src="https://booth.pximg.net/c/48x48/users/5436743/icon_image/b4a85dec-fb06-48a9-a03a-b4ac25ec1ddf_base_resized.jpg" witdh=80 height=80>
 <div class="text_content">
 <span class="pack_name"><a href="https://yuuram255.booth.pm/items/4031952"><sama>yuuram255 様</sama></a></span><br>霊夢/魔理沙の立ち絵をお借りしております。
 </div>
