--- a/Link.html
+++ b/Link.html
@@ -84,7 +84,7 @@
 <div class="pack_flame">
 <img src="images/app_icon2.png" witdh=80 height=80>
 <div class="text_content">
-<span class="pack_name"><a href="https://akaina0808.netlify.app/">旧:赫稲サイト</a></span><br>
+<span class="pack_name"><a href="\u0068\u0074\u0074\u0070\u0073\u003a\u002f\u002f\u0061\u006b\u0061\u0069\u006e\u0061\u0030\u0038\u0030\u0038\u002e\u006e\u0065\u0074\u006c\u0069\u0066\u0079\u002e\u0061\u0070\u0070\u002f">旧:赫稲サイト</a></span><br>
 </div>
 </div>
 
