--- a/Download.html
+++ b/Download.html
@@ -22,8 +22,8 @@
 <h1 id="logo">Download</a></h1>
 <nav id="menubar">
 <ul>
-<li><a href="./index.html">HOME</a></li>
-<li><a href="./Link.html">LINK</a></li>
+<li><a href="index.html">HOME</a></li>
+<li><a href="Link.html">LINK</a></li>
 </ul>
 </nav>
 </header>
