--- a/Download.html
+++ b/Download.html
@@ -23,7 +23,7 @@
 <nav id="menubar">
 <ul>
 <li><a href="index.html">HOME</a></li>
-<li><a href="Link.html">LINK</a></li>
+<li><a href="./Link.html">LINK</a></li>
 </ul>
 </nav>
 </header>
