--- a/Link.html
+++ b/Link.html
@@ -64,7 +64,7 @@
 <div class="pack_flame">
 <img src="" witdh=80 height=80>
 <div class="text_content">
-<span class="pack_name"><a href="https://aipict.com/daytime_sky/"><sama>yuuram255 様</sama></a></span><br>霊夢/魔理沙の立ち絵をお借りしております。
+<span class="pack_name"><a href="https://aipict.com/daytime_sky/"><sama>AIPICT 様</sama></a></span><br>背景のイラストを使わせてもらっております。
 </div>
 </div>
 
