--- a/Link.html
+++ b/Link.html
@@ -67,6 +67,14 @@
 <span class="pack_name"><a href="https://aipict.com/daytime_sky/"><sama>AIPICT 様</sama></a></span><br>背景のイラストを使わせてもらっております。
 </div>
 </div>
+  
+  
+<div class="pack_flame">
+<img src="https://www.mcmod.cn/static/public/images/logo.png?v=4" witdh=80 height=80>
+<div class="text_content">
+<span class="pack_name"><a href="https://www.mcmod.cn/item/186726.html"><sama>百科 様</sama></a></span><br>東方リトルメイドの詳細が乗っているサイトです。
+</div>
+</div>
 
   
   
