--- a/Link.html
+++ b/Link.html
@@ -76,6 +76,12 @@
 </div>
 </div>
 
+<div class="pack_flame">
+<img src="https://pbs.twimg.com/profile_images/1679700336586661889/Js1RueE5_400x400.jpg" witdh=80 height=80>
+<div class="text_content">
+<a href="https://twitter.com/micheru218?t=SFbkgH53J2pnV95PVUWB-g&s=09"><sama>みちぇる 様</sama></a></span><br>イラストをお借りしております。
+</div>
+</div>
   
 <div class="pack_flame">
 <img src="https://images-ext-1.discordapp.net/external/MKV0o200CtAbP98KYiXTDSi1szdN1oNQYm6zLulV6zc/%3Fv%3D4/https/www.mcmod.cn/static/public/images/logo.png" witdh=80 height=80>
@@ -88,7 +94,7 @@
 <div class="pack_flame">
 <img src="" witdh=80 height=80>
 <div class="text_content">
-<span class="pack_name"><a href="./sounds.html"><sama>Minecraft sounds.json</sama></a></span><br>東方リトルメイドの詳細が乗っているサイトです。
+<span class="pack_name"><a href="./sounds.html"><sama>Minecraft sounds.json</sama></a></span><br>sounds.jsonの日本語版
 </div>
 </div>
 
