--- a/Download.html
+++ b/Download.html
@@ -39,7 +39,7 @@
 <tr>
 <th>東方リトルメイド再現アドオン.V1</th>
 <td>東方リトルメイドMODを統合版で再現したアドオンです。しかし遊べる程度なので完成度は低いV.2からなにか来るかも</td>
-<th><a href="./addon/touhou_Little_V.1_.mcaddon" download="touhouLittleMADE.mcaddon">Download</a></th>
+<th><a href="./addon/touhou/touhou_Little_V.1_.mcaddon" download="touhouLittleMADE.mcaddon">Download</a></th>
 </tr>
 <tr>
 <th>no</th>
