--- a/Sanka/Yuka0745.html
+++ b/Sanka/Yuka0745.html
@@ -43,7 +43,7 @@ Yuka0745</font1><span>参加日:2023/05/27</span></h2>
 
 <dl id="Yuka0745">
 <dd> </dd>
-<dd>resource pack のUIは主にYuka0745さんのを使用しております。サイトも進行にさせてもらいました。ありがとうございます！このお方は個人でアドオンやテクスチャを配布しております。なのでそちらのリンクも貼らせてもらいますね。うちのサーバーでUIが1番作れる人です。</dd>
+<dd>resource pack のUIは主にYuka0745さんのを使用しております。サイトも参考にさせてもらいました。ありがとうございます！このお方は個人でアドオンやテクスチャを配布しております。なのでそちらのリンクも貼らせてもらいますね。うちのサーバーでUIが1番作れる人です。</dd>
 </dl>
 <a href="https://gotemba912.github.io/">Yuka0745サイト</a></li>
 </section>
