--- a/Download.html
+++ b/Download.html
@@ -37,7 +37,7 @@
 <th colspan="2" class="tamidashi">アドオン一覧(2023～)</th>
 </tr>
 <tr>
-<th>東方リトルメイド再現アドオン.V1</th>
+<th>東方リトルメイド再現アドオン.V1(まだ配布してません。)</th>
 <td>東方リトルメイドMODを統合版で再現したアドオンです。しかし遊べる程度なので完成度は低いV.2からなにか来るかも</td>
 <th><a href="./addon/touhou/touhou_Little_V.1_.mcaddon" download="touhouLittleMADE.mcaddon">Download</a></th>
 </tr>
