--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
 			<p class="readmore"><a href="https://www.minecraft.net/ja-jp">詳細を確認する</a></p>
 		</article>
 		<article class="grid">
+			<h3>discord</h3>
+			<img src="https://discord.gg/EhKSAMt8M" width="220" height="175" alt="">			
+			<p>私のdiscordです。</p>
+			<p class="readmore"><a href="https://www.minecraft.net/ja-jp">詳細を確認する</a></p>
+		</article>
+		<article class="grid">
 			<h3>CapCut</h3>
 			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTCRBso9cT3bXETbiHK309kn_AVDJH_WahqHXjRQk01E38u06yUWFdPQfs&s=10" width="220" height="175" alt="">
 			<p>スマホ版の動画編集アプリです。大体私の動画はこの編集アプリが使われております。</p>
