--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 			<h3>discord</h3>
 			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQLek39mENby4ZpnCJX5hotiSU_Ordxa0ex-w&usqp=CAU" width="220" height="175" alt="">			
 			<p>私のdiscordです。</p>
+			<p>This is my discord.</p>
 			<p class="readmore"><a href="https://discord.gg/EhKSAMt8M">詳細を確認する</a></p>
 		</article>
 		<article class="grid">
