--- a/index.html
+++ b/index.html
@@ -43,12 +43,13 @@
 			<h3>赫稲サイトです。こちらでは色々とできますね。</h3>
 			<h3>It is a akaina site. You can do a lot here.</h3>
 		</div>
-	</div>
+	</div><https://www.youtube.com/@akaina0809>
 	<section class="gridWrapper">
 		<article class="grid">
 			<h3>Minecraft</h3>
 			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRGKcopl3aGOVMTtkK0H-MOczYYiwNu8PFLHQ&usqp=CAU" width="220" height="175" alt="">			
-			<p>私のやっているゲームのメインですね。Minecraftは楽しいですがJava版と統合版に別れてるのが不便</p>
+			<p>私のYouTubeです。Minecraftをメインにしております。</p>	
+			<p>This is my YouTube. Mainly Minecraft.</p>
 			<p class="readmore"><a href="https://www.minecraft.net/ja-jp">詳細を確認する</a></p>
 		</article>
 		<article class="grid">
@@ -58,6 +59,12 @@
 			<p>This is my discord.</p>
 			<p class="readmore"><a href="https://discord.gg/EhKSAMt8M">参加する。</a></p>
 			<p class="readmore"><a href="https://discord.gg/EhKSAMt8M">participate.</a></p>
+		</article>
+		<article class="grid">
+			<h3>Minecraft</h3>
+			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRGKcopl3aGOVMTtkK0H-MOczYYiwNu8PFLHQ&usqp=CAU" width="220" height="175" alt="">			
+			<p>私のやっているゲームのメインですね。Minecraftは楽しいですがJava版と統合版に別れてるのが不便</p>
+			<p class="readmore"><a href="https://www.minecraft.net/ja-jp">詳細を確認する</a></p>
 		</article>
 		<article class="grid">
 			<h3>CapCut</h3>
