--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 	</div><https://www.youtube.com/@akaina0809>
 	<section class="gridWrapper">
 		<article class="grid">
-			<h3>Minecraft</h3>
-			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRGKcopl3aGOVMTtkK0H-MOczYYiwNu8PFLHQ&usqp=CAU" width="220" height="175" alt="">			
-			<p>私のYouTubeです。Minecraftをメインにしております。</p>	
-			<p>This is my YouTube. Mainly Minecraft.</p>
-			<p class="readmore"><a href="https://www.minecraft.net/ja-jp">詳細を確認する</a></p>
+			<h3>YouTube</h3>
+			<img src="" width="220" height="175" alt="">			
+			<p>私のYouTubeです。</p>	
+			<p>This is my YouTube. </p>
+			<p class="readmore"><a href="https://www.youtube.com/@akaina0809">確認する</a></p>
 		</article>
 		<article class="grid">
 			<h3>discord</h3>
