--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<section class="gridWrapper">
 		<article class="grid">
 			<h3>YouTube</h3>
-			<img src="" width="220" height="175" alt="">			
+			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6VA4LFWn__CPwipsbuJQlUSi3jCtJNY_v0g&usqp=CAU" width="220" height="175" alt="">			
 			<p>私のYouTubeです。</p>	
 			<p>This is my YouTube. </p>
 			<p class="readmore"><a href="https://www.youtube.com/@akaina0809">確認する</a></p>
