--- a/Download.html
+++ b/Download.html
@@ -39,7 +39,8 @@
 <tr>
 <th><a href="" target="_blank">東方リトルメイド再現アドオン.V1(まだ配布してません。)</a></th>
 <td>東方リトルメイドMODを統合版で再現したアドオンです。しかし遊べる程度なので完成度は低いV.2からなにか来るかも</td>
-<th><a href="./addon/touhou/touhou_Little_V.1_.mcaddon" download="touhouLittleMADE.mcaddon">Download</a></th>
+<th><a href="./addon/touhou/touhou_Little_V.1_.mcaddon" download="touhouLittleMADE.mcaddon"><input type="button" value="Download" onClick="count();"></a></th><th>
+<p>download：<span id="count">0</span></th>
 </tr>
 <tr>
 <th>no</th>
@@ -85,6 +86,7 @@
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <!--自作のJS-->
 <script src="js/animation_0.js"></script>
+<script src="js/count.js"></script>
 
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
