--- a/Download.html
+++ b/Download.html
@@ -39,8 +39,8 @@
 <tr>
 <th><a href="" target="_blank">東方リトルメイド再現アドオン.V1(まだ配布してません。)</a></th>
 <td>東方リトルメイドMODを統合版で再現したアドオンです。しかし遊べる程度なので完成度は低いV.2からなにか来るかも</td>
-<th><a href="./addon/touhou/touhou_Little_V.1_.mcaddon" download="touhouLittleMADE.mcaddon"><input type="button" value="Download" onClick="count();"></a></th>
-<p>download：<span id="count">0</span>
+<th><a href="./addon/touhou/touhou_Little_V.1_.mcaddon" download="touhouLittleMADE.mcaddon"><input type="button" value="Download" onClick="count();"></a><p>download：<span id="count">0</span></th>
+
 </tr>
 <tr>
 <th>no</th>
