--- a/index.html
+++ b/index.html
@@ -1,105 +1,101 @@
-<!DOCTYPE html>
-<html dir="ltr" lang="ja">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, user-scalable=yes, maximum-scale=1.0, minimum-scale=1.0">
-<meta name="description" content="新:赫稲サイト">
-<meta name="keywords" content="">
-<title>赫稲サイトです。前のサイトは残しておりますがこちらがメインです。</title>
-<link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
-<link rel="stylesheet" type="text/css" href="css/animation_1.css">
+<html lang="ja">
 
+
+<title>赫稲 カスタムコマンド生成サイト</title>
+
+<script src="akaina.js"></script>
+
+<head>
+  <link rel="stylesheet" type="text/css" href="index.css">
+  <link rel="icon" href="./icon.png">
+  <meta charset="utf-8" />
+  <meta name="Description" content="マイクラのカスタムコマンドでコマンドを簡単に実行するコマンドを簡単に生成することが出来ます!"/>
+
+<link rel="stylesheet" type="text/css" href="index.css">
+<link rel="icon" href="favicon.ico">
+<meta charset="utf-8"/>
+<meta property="og:site_name" content="赫稲"/>
+<meta property="og:title" content="カスタムコマンド生成"/>
+<meta property="og:image" content="./icon.png"/>
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<font style="font-family: 'arial',sans-serif;">
 </head>
 
-<div id="splash"> <div id="splash-logo">赫稲サイトホーム</div> <!--/splash--></div> <div class="splashbg"></div>
-<div id="container">
+<script src="../header.js"></script>
 
-<body>
-<div id="header">
-	<div class="inner">
-		<h1>赫稲サイト</h1>
-		<div class="logo">
-			<a href="index.html">このサイトでは色々配布したりします。<br><span>2次配布などを禁止しますよ</span></a>
-		</div>
-		<ul id="topnav">
-			<li class="active"><a href="index.html">トップページ<br><span>Top</span></a></li>
-			<li><a href="akaina.html">ごあいさつ<br><span>Greeting</span></a></li>
-			<li><a href="Download.html">ダウンロード<br><span>Download</span></a></li>
-			<li><a href="osirase.html">お知らせ<br><span>Notice</span></a></li>
-			<li><a href="./Link.html">リンク集<br><span>Link Collection</span></a></li>
-			<li><a href="Sanka.html">参加者<br><span>Participant</span></a></li>
-			<li><a href="subpage.html">利用規約<br><span>Terms of service</span></a></li>
-		</ul>
-	</div>
+
+
+
+<br>
+
+<div class="pack_flame">
+<img src="../images/app_icon.png" witdh=80 height=80>
+<div class="text_content">
+<span class="pack_name"> カスタムコマンドジェネレーター</span><br>
+マイクラのカスタムでコマンドを実行するカスタムを簡単に生成することが出来ます!
+</div>
 </div>
 
-<div id="wrapper">
+<h2>
 
-	<!-- メイン画像 -->
-	<div id="mainBanner" class="hakurei">
-		<img src="images/hakurei.png" alt="">
-		<div class="slogan">
-			<h2>赫稲サイト</h2>
-			<h3>赫稲サイトです。こちらでは色々とできますね。</h3>
-			<h3>It is a akaina site. You can do a lot here.</h3>
-		</div>
-	</div><https://www.youtube.com/@akaina0809>
-	<section class="gridWrapper">
-		<article class="grid">
-			<h3>YouTube</h3>
-			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6VA4LFWn__CPwipsbuJQlUSi3jCtJNY_v0g&usqp=CAU" width="220" height="175" alt="">			
-			<p>私のYouTubeです。</p>	
-			<p>This is my YouTube. </p>
-			<p class="readmore"><a href="https://www.youtube.com/@akaina0809">確認する</a></p>
-		</article>
-		<article class="grid">
-			<h3>discord</h3>
-			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQLek39mENby4ZpnCJX5hotiSU_Ordxa0ex-w&usqp=CAU" width="220" height="175" alt="">			
-			<p>私のdiscordです。</p>
-			<p>This is my discord.</p>
-			<p class="readmore"><a href="https://discord.gg/EhKSAMt8M">参加する。</a></p>
-			<p class="readmore"><a href="https://discord.gg/EhKSAMt8M">participate.</a></p>
-		</article>
-		<article class="grid">
-			<h3>Minecraft</h3>
-			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRGKcopl3aGOVMTtkK0H-MOczYYiwNu8PFLHQ&usqp=CAU" width="220" height="175" alt="">			
-			<p>私のやっているゲームのメインですね。Minecraftは楽しいですがJava版と統合版に別れてるのが不便</p>
-			<p class="readmore"><a href="https://www.minecraft.net/ja-jp">詳細を確認する</a></p>
-		</article>
-		<article class="grid">
-			<h3>CapCut</h3>
-			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTCRBso9cT3bXETbiHK309kn_AVDJH_WahqHXjRQk01E38u06yUWFdPQfs&s=10" width="220" height="175" alt="">
-			<p>スマホ版の動画編集アプリです。大体私の動画はこの編集アプリが使われております。</p>
-			<p class="readmore"><a href="https://www.capcut.com/ja-jp/">詳細を確認する</a></p>
-		</article>
-		<article class="grid">
-			<h3>Code Editor - Compiler & IDE</h3>
-			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSWkxpEnD-3sFf9nOM5l6iK6PfeSxxo9_Nmow&usqp=CAU" width="220" height="175" alt="">
-			<p>アドオンの作成など全てこのアプリとファイルマネージャーを使用しております。</p>
-			<p class="readmore"><a href="https://play.google.com/store/apps/details?id=com.rhmsoft.code">詳細を確認する:Google Play</a></p>
-			<p class="readmore"><a href="https://apps.apple.com/us/app/code-editor-compiler-ide/id1581290510">詳細を確認する:App Store</a></p>
-		</article>
-		<article class="grid">
-			<h3>MediBang Paint</h3>
-			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTBbJCSIcepeSlE17pOn1NeFyeEUTno5PTMIA&usqp=CAU" width="220" height="175" alt="">
-			<p>イラストや画像編集に使えるアプリです。私のアドオンのTextureは全てこちらで作成しております。</p>
-			<p class="readmore"><a href="https://medibangpaint.com/">詳細を確認する</a></p>
-		</article>
-	</section>
+<span class="header_text">文章をカスタムコマンドに変換</span>
+</h2>
+<p>これは自分の名前で規制する時に使われます。 なお、自分名前に「//」を入れないようにしましょう。</p>
+<input type="text" id="name" name="name" required style="width:100%; height:20px;"><br>
+<p>文章を下に入力するか、コピペしてください。</p>
+<textarea id="honbun"  style="width:100%; height:200px;"></textarea>
+<input type="button" onclick="convert();" value="変換" style="width:100%; height:30px;">
+<p>Result↓</p>
 
-	<section class="content">
-		<h3 class="heading">It's Google Translate.</h3>
-		<article>
-			<img src="https://play-lh.googleusercontent.com/ZrNeuKthBirZN7rrXPN1JmUbaG8ICy3kZSHt-WgSnREsJzo2txzCzjIoChlevMIQEA=w240-h480-rw" width="320" height="240" alt="" class="alignleft frame">
-			<p>
-Hello, I'm 赫稲. This site has various reference sites and a template site. Now let me tell you a little bit about me. My name is akaina, and the reading is pretty 😊 Age: I don't really care about gender. One of the reasons I became interested in addons is the Java version of the mod. I'm interested in mods, but I can't make them, so I started making addons. It was surprisingly fun and I decided to be active as an activist. Please know that I'm red. By the way, about this site, cats are the main activity on this site. Until now, I used various sites to make it, but it's easier to put it all together, so I'll start from scratch in 2023. I was making a site. This site has a paid version, but most of it is free.Activities Create and distribute requested items as soon as possible. If there is anything you can do for someone who has joined the activity, ask them to help you. If there is something you want me to teach you, I will do my best to teach you. Money is currently (2023/01/01) an illustrator (a person who writes illustrations). I'm going to go out alone. I want to join the activity, but what should I do? If there is anything you can do, I want you to do it. I will not force you. But please be friendly with the people in the server. Block and kick people who commit abusive language or slander. that's all. Thank you to everyone who watched this far!</p>
-		</article>
-	</section>
+<h3>
+<span id="correct"></span>
+</h3>
+
+<textarea id="result"  style="width:100%; height:200px;" readonly></textarea>
+<input type="button" id="copy_btn" onclick="copy_to_clip();" value="コピーする" style="width:100%; height:30px;" disabled>
+<input type="button" id="download_btn" onclick="download_file();" value="ダウンロード" style="width:100%; height:30px;" disabled>
+
+<h2>
+
+<span class="header_text">使い方</span>
+
+</h2>
+</p>
+行に<span style="font-family: monospace; font-size:large;"></span>そのまま入れるとメモになります。そして//を入れないでください空欄を空けるとメモ扱いになります。</p>
+<p>行に「<span style="font-family: monospace; font-size:large;">h></span>コマンド名。」<br>
+<p>行に「<span style="font-family: monospace; font-size:large;">c></span>実行コマンド。」<br><p>
+<p>行に「<span style="font-family: monospace; font-size:large;">no></span><no>禁止</no>文字。」<br><p>
+h>!testと入れるのではなく h>test と入れてください!はデフォルトでついています。<br>
+<p style="font-family: monospace; font-size:large;">例:<br>
+h>test<br>
+c>kill @e<br>
+no>test_0
+</p>
+
+<div style="text-align:center;">
+<img src="images/test.png" alt="生成後の例" title="生成後の例" style="max-width: 50%; height: auto;">
 </div>
-<div id="footer"></div></div>
-<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-<script src="js/animation_1.js"></script>
-<script src="js/html5.js"></script>
-<script src="js/css3-mediaqueries.js"></script>
+
+<h2>
+
+<span class="header_text">変更履歴</span>
+
+</h2>
+
+2023/06/13 - リリース<br>
+2023/07/10 - サイトを変更<br>
+2023/07/11 - サイトの説明文とコマンドを変更<br>
+2023/07/12 - ファイルを最新版へ(1.20.10)変更<br>
+2023/08/13 - <no>禁止</no>文字を追加<br>
+
+  <p>赫稲サイトへようこそ！</p>
+  <p>Welcome to the akaina site!</p>
+  <li>
+  <img src="./images/app_icon.png" alt="" width="40"><a href="
+      https://akaina0808.netlify.app/">ホームページ
+[HOME]</a></li>
+  <li>
+  <img src="images/custom_icon.png" alt="" width="40"><a href="https://www.mediafire.com/file/f1uy94ed301y5k6/カスタムコマンド入れるファイル.zip/file">カスタムコマンドを入れるファイル(file📂)</a></li>
+
 </body>
 </html>
