--- a/sakusei.html
+++ b/sakusei.html
@@ -7,7 +7,7 @@
 
 <head>
   <link rel="stylesheet" type="text/css" href="index.css">
-  <link rel="icon" href="./icon.png">
+  <link rel="icon" href="icon.png">
   <meta charset="utf-8" />
   <meta name="Description" content="マイクラのカスタムコマンドでコマンドを簡単に実行するコマンドを簡単に生成することが出来ます!"/>
 
@@ -16,7 +16,7 @@
 <meta charset="utf-8"/>
 <meta property="og:site_name" content="赫稲"/>
 <meta property="og:title" content="カスタムコマンド生成"/>
-<meta property="og:image" content="./icon.png"/>
+<meta property="og:image" content="icon.png"/>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <font style="font-family: 'arial',sans-serif;">
 </head>
