--- a/sakusei.html
+++ b/sakusei.html
@@ -28,7 +28,7 @@
 <br>
 
 <div class="pack_flame">
-<img src="../images/app_icon.png" witdh=80 height=80>
+<img src="../images/icon.png" witdh=80 height=80>
 <div class="text_content">
 <span class="pack_name"> カスタムコマンドジェネレーター</span><br>
 マイクラのカスタムでコマンドを実行するカスタムを簡単に生成することが出来ます!
