--- a/sakusei.html
+++ b/sakusei.html
@@ -28,7 +28,7 @@
 <br>
 
 <div class="pack_flame">
-<img src="../images/icon.png" witdh=80 height=80>
+<img src="./images/icon.png" witdh=80 height=80>
 <div class="text_content">
 <span class="pack_name"> カスタムコマンドジェネレーター</span><br>
 マイクラのカスタムでコマンドを実行するカスタムを簡単に生成することが出来ます!
@@ -86,12 +86,13 @@ no>test_0
 2023/07/11 - サイトの説明文とコマンドを変更<br>
 2023/07/12 - ファイルを最新版へ(1.20.10)変更<br>
 2023/08/13 - <no>禁止</no>文字を追加<br>
+2023/09/10 - 禁止メッセージを追加tagでnoが付いてる人はメッセージ除外されます。<br>
+2023/09/10 - 旧サイトから新サイトへ移植<br>
 
   <p>赫稲サイトへようこそ！</p>
   <p>Welcome to the akaina site!</p>
   <li>
-  <img src="./images/app_icon.png" alt="" width="40"><a href="
-      https://akaina0808.netlify.app/">ホームページ
+  <img src="./images/icon.png" alt="" width="40"><a href="https://akaina0809.github.io/dsito/index.html">ホームページ
 [HOME]</a></li>
   <li>
   <img src="images/custom_icon.png" alt="" width="40"><a href="https://www.mediafire.com/file/f1uy94ed301y5k6/カスタムコマンド入れるファイル.zip/file">カスタムコマンドを入れるファイル(file📂)</a></li>
