--- a/osirase.html
+++ b/osirase.html
@@ -28,9 +28,10 @@
 </li>
 <li>
 <section>
-<h3 class="title">2023/09/01</h3>
+<h3 class="title">2023/09/10</h3>
 <div class="box">
-<p>東方リトルメイドMOD再現アドオンを配布しております。12体ぐらいいるのですが入手などがアプデが必須になりました。次回までお楽しみに</p>
+<p>カスタムコマンド生成サイトを旧サイトから新サイトへ移植</p>
+<p>Ported the custom command generation site from the old site to the new site.</p>
 </div>
 </section>
 </li>
