--- a/osirase.html
+++ b/osirase.html
@@ -2,8 +2,8 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8" />
-    <title>お知らせまたはアプデ内容</title>
-<meta name="description"  content="お知らせやアプデ内容を確認できるサイトです。">
+    <title>お知らせまたはアプデ内容:Notice or update content</title>
+<meta name="description"  content="お知らせやアプデ内容を確認できるサイトです。:This is a site where you can check the contents of announcements and updates.">
 
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -12,11 +12,11 @@
 
 <body>
 		<ul id="topnav">
-			<li class="active"><a href="./index.html"><h2>トップページ</h2><br></a></li>
+			<li class="active"><a href="./index.html"><h2>トップページ:top</h2><br></a></li>
 </ul>
 
 <ul class="accordion-area">
-<h2>お知らせまたはアプデ内容</h2>
+<h2>お知らせまたはアプデ内容:Notice or update content</h2>
 
 <li>
 <section>
