--- a/osirase.html
+++ b/osirase.html
@@ -23,6 +23,7 @@
 <h3 class="title">2023/01/01</h3>
 <div class="box">
 <p>新しくサイトを作成して2023/08/17に公開</p>
+<p>Create a new site and publish it on 2023/08/17</p>
 </div>
 </section>
 </li>
