--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			<li class="active"><a href="index.html">トップページ<br><span>Top</span></a></li>
 			<li><a href="akaina.html">ごあいさつ<br><span>Greeting</span></a></li>
 			<li><a href="Download.html">ダウンロード<br><span>Download</span></a></li>
+			<li><a href="sns.html">SNS<br><span>SNS</span></a></li>
 			<li><a href="osirase.html">お知らせ<br><span>Notice</span></a></li>
 			<li><a href="sakusei.html">カスタムコマンド<br><span>customCommand</span></a></li>
 			<li><a href="./Link.html">リンク集<br><span>Link Collection</span></a></li>
