--- a/osirase.html
+++ b/osirase.html
@@ -36,6 +36,15 @@
 </div>
 </section>
 </li>
+<li>
+<section>
+<h3 class="title">2023/09/10</h3>
+<div class="box">
+<p>私のやっているSNSの最新動画や投稿を出すサイトを作成</p>
+<p>Created a site to post the latest videos and posts from my SNS.</p>
+</div>
+</section>
+</li>
 </ul>
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
