--- a/sns.html
+++ b/sns.html
@@ -22,6 +22,7 @@
 
   <div class="wrapper">
   <ul class="tab">
+    <li><a href="https://akaina0809.github.io/dsito/index.html">ホーム:HOME</a></li>
     <li><a href="#YouTube">YouTube</a></li>
     <li><a href="#Twitter">旧:Twitter(X)</a></li>
     <li><a href="#TikTok">TikTok</a></li>
