--- a/Link.html
+++ b/Link.html
@@ -106,7 +106,7 @@
 
 
 <div class="pack_flame">
-<img src="images/app_icon.png" witdh=80 height=80>
+<img src="images/icon.png" witdh=80 height=80>
 <div class="text_content">
 <a href="./index.html">新:赫稲サイト</a></span><br>
 ホームサイト
@@ -115,7 +115,7 @@
 
 
 <div class="pack_flame">
-<img src="images/app_icon2.png" witdh=80 height=80>
+<img src="images/app_icon.png" witdh=80 height=80>
 <div class="text_content">
 <span class="pack_name"><a href="https://akaina0808.netlify.app/">旧:赫稲サイト</a></span><br>
 </div>
