--- a/Link.html
+++ b/Link.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="ja">
 
-<title>赫稲サイト</title>
+<title>赫稲サイト:リンク集:LINK</title>
 
 <head>
 <link rel="stylesheet" type="text/css" href="css/akaina.css">
 <link rel="icon" href="favicon.ico">
 <meta charset="utf-8"/>
-<meta name="Description" content="このサイトは、赫稲がYuka0745のサイトを参考に作ったサイトです。" />
+<meta name="Description" content="このサイトは、赫稲がYuka0745のサイトを参考に作ったサイトです。:リンク集:LINK" />
 <meta name="keywords" content="Yuka0745,赫稲"/>
 <meta name="theme-color" content="#00bfff" />
-<meta property="og:description" content="このサイトは、赫稲がYuka0745のサイトを参考に作ったサイトです。" />
-<meta property="og:site_name" content="赫稲" />
-<meta property="og:title" content="赫稲サイト" />
+<meta property="og:description" content="このサイトは、赫稲がYuka0745のサイトを参考に作ったサイトです。:リンク集:LINK" />
+<meta property="og:site_name" content="赫稲:リンク集:LINK" />
+<meta property="og:title" content="赫稲サイト:リンク集:LINK" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <font style="font-family: 'arial',sans-serif;">
 
