--- a/Download.html
+++ b/Download.html
@@ -42,7 +42,7 @@
 <th><a href="./addon/touhou/touhou_Little_V.1_.mcaddon" download="touhouLittleMADE.mcaddon"><input type="button" value="download" onClick="count();"></a><p>download：<span id="count">0</span></th>
 
 </tr>
-<tr><th><a href="" target="_blank">Touhou Komeiji Koishi GUI.mcpack</a></th>
+<tr><th><a href="./addon/Komeiji_Koishi.html" target="_blank">Touhou Komeiji Koishi GUI.mcpack</a></th>
 <td>Touhou Komeiji Koishi GUI</td>
 <th><a href="./addon/Touhou Komeiji Koishi GUI.mcpack" download="Touhou Komeiji Koishi GUI.mcpack"><input type="button" value="download" onClick="count();"></a><p>download：<span id="count">0</span></th>
 </tr>
