--- a/Download.html
+++ b/Download.html
@@ -44,7 +44,7 @@
 </tr>
 <tr><th><a href="./addon/Komeiji_Koishi.html" target="_blank">Touhou Komeiji Koishi GUI.mcpack</a></th>
 <td>Touhou Komeiji Koishi GUI</td>
-<th><a href="./addon/Touhou Komeiji Koishi GUI.mcpack" download="Touhou Komeiji Koishi GUI.mcpack"><input type="button" value="download" onClick="count();"></a><p>download：<span id="count">0</span></th>
+<th><a href="./addon/Touhou_Komeiji_Koishi_GUI.mcpack" download="Touhou Komeiji Koishi GUI.mcpack"><input type="button" value="download" onClick="count();"></a><p>download：<span id="count">0</span></th>
 </tr>
 <tr>
 <th>no</th>
