--- a/Download.html
+++ b/Download.html
@@ -42,9 +42,9 @@
 <th><a href="./addon/touhou/touhou_Little_V.1_.mcaddon" download="touhouLittleMADE.mcaddon"><input type="button" value="download" onClick="count();"></a><p>download：<span id="count">0</span></th>
 
 </tr>
-<tr><th><a href="./addon/touhou/Komeiji_Koishi.html" target="_blank">Touhou Komeiji Koishi GUI.mcpack</a></th>
-<td>Touhou Komeiji Koishi GUI</td>
-<th><a href="./addon/touhou/Touhou_Komeiji_Koishi_GUI.mcpack" download="Touhou_Komeiji_Koishi_GUI.mcpack"><input type="button" value="download" onClick="count_2();"></a><p>download：<span id="count_2">30</span></th>
+<tr><th><a href="./addon/touhou/Komeiji_Koishi.html" target="_blank">Touhou Komeiji Koishi GUI_V1.5.mcpack</a></th>
+<td>Touhou Komeiji Koishi GUI V1.5</td>
+<th><a href="./addon/touhou/Touhou_Komeiji_Koishi_GUI.mcpack" download="Touhou_Komeiji_Koishi_GUI_V1.5.mcpack"><input type="button" value="download" onClick="count_2();"></a><p>download：<span id="count_2">30</span></th>
 </tr>
 <tr>
 <th>no</th>
