--- a/addon/touhou/Komeiji_Koishi.html
+++ b/addon/touhou/Komeiji_Koishi.html
@@ -22,6 +22,7 @@
 					<li><a href="#sec01">GUI</a></li>
 					<li><a href="#sec02">使い方:Used</a></li>
 					<li><a href="#sec03">最後に:last</a></li>
+					<li><a href="#sec04">変更:list</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -73,6 +74,15 @@
 		<img src="images/Used.jpg" width="726" height="333" alt="">
 		<p>カスタマイズしたい場合は私のGUIを使用したことを記載してください。決して自作発言や記載を無視するなどの行為が報告または見かけた場合GUI自体を消去無視した人への対処は追放やコメントにての報告そしてdiscordにいた場合はBANとなります。</p>
 		<p>If you want to customize it, please mention that you used my GUI. If you report or see behavior such as ignoring self-made comments or descriptions, the GUI itself will be deleted, and those who ignore it will be banned, reported in the comments, and if they are on discord, banned.</p>
+	</div>
+</section>
+<section id="sec04">
+	<header>
+		<h2><span>変更:list</span></h2>
+	</header>
+	<div class="innerS">
+		<p>旧取引画面のGUIの大きさが違った問題を解決した。</p>
+		<p>Solved the issue where the GUI size of the old trading screen was different.</p>
 	</div>
 </section>
 
