--- a/addon/touhou/Komeiji_Koishi.html
+++ b/addon/touhou/Komeiji_Koishi.html
@@ -17,7 +17,7 @@
 			<p id="menuWrap"><a id="menu"><span id="menuBtn"></span></a></p>
 			<div class="panel">
 				<ul>
-					<li><a href="https://akaina0809.github.io/dsito/index.html">HOME</a></li>
+					<li><a href="https://akaina0809.github.io/dsito/Download.html">HOME</a></li>
 					<li><a href="#top">TOP</a></li>
 					<li><a href="#sec01">GUI</a></li>
 					<li><a href="#sec02">使い方:Used</a></li>
