--- a/Download.html
+++ b/Download.html
@@ -37,9 +37,9 @@
 <th colspan="2" class="tamidashi">アドオン一覧(2023～)</th>
 </tr>
 <tr>
-<th><a href="" target="_blank">東方リトルメイド再現アドオン.V1(まだ配布してません。)[No Download]</a></th>
+<th><a href="./addon/Aaa/touhou_Little.html" target="_blank">東方リトルメイド再現アドオン.V1(まだ配布してません。)[No Download]</a></th>
 <td>東方リトルメイドMODを統合版で再現したアドオンです。しかし遊べる程度なので完成度は低いV.2からなにか来るかも</td>
-<th><a href="./addon/touhou/touhou_Little_V.1_.mcaddon" download="touhouLittleMADE.mcaddon"><input type="button" value="download" onClick="count();"></a><p>download：<span id="count">0</span></th>
+<th><a href="./addon/Aaa/touhou_Little_V.1_.mcaddon" download="touhouLittleMADE.mcaddon"><input type="button" value="download" onClick="count();"></a><p>download：<span id="count">0</span></th>
 
 </tr>
 <tr><th><a href="./addon/touhou/Komeiji_Koishi.html" target="_blank">Touhou Komeiji Koishi GUI_V1.5.mcpack</a></th>
