--- a/Download.html
+++ b/Download.html
@@ -39,17 +39,20 @@
 <tr>
 <th><a href="./addon/Aaa/touhou_Little.html" target="_blank">東方リトルメイド再現アドオン.V1(まだ配布してません。)[No Download]</a></th>
 <td>東方リトルメイドMODを統合版で再現したアドオンです。しかし遊べる程度なので完成度は低いV.2からなにか来るかも</td>
-<th><a href="./addon/Aaa/touhou_Little_V.1_.mcaddon" download="touhouLittleMADE.mcaddon"><input type="button" value="download" onClick="count();"></a><p>download：<span id="count">0</span></th>
+<th><a href="./addon/Aaa/touhou_Little_V.1_.mcaddon" download="touhouLittleMADE.mcaddon"><input type="button" value="download"></a></th>
 
 </tr>
 <tr><th><a href="./addon/touhou/Komeiji_Koishi.html" target="_blank">Touhou Komeiji Koishi GUI_V1.5.mcpack</a></th>
 <td>Touhou Komeiji Koishi GUI V1.5</td>
-<th><a href="./addon/touhou/Touhou_Komeiji_Koishi_GUI.mcpack" download="Touhou_Komeiji_Koishi_GUI_V1.5.mcpack"><input type="button" value="download" onClick="count_2();"></a><p>download：<span id="count_2">300</span></th>
+<th><a href="./addon/touhou/Touhou_Komeiji_Koishi_GUI.mcpack" download="Touhou_Komeiji_Koishi_GUI_V1.5.mcpack"><input type="button" value="download"></a></th>
 </tr>
+
 <tr>
-<th>no</th>
-<td>NO_file</td>
+<tr><th><a href="./addon/skin/skin.html" target="_blank">Skin change add-on site</a></th>
+<td>skin change addon</td>
+<th><a href="./addon/skin/addon/skin.mcaddon" download="skin.mcaddon"><input type="button" value="download"></a></th>
 </tr>
+
 <tr>
 <th>no</th>
 <td>NO_file</td>
