--- a/Download.html
+++ b/Download.html
@@ -39,7 +39,7 @@
 <tr>
 <th><a href="./addon/Aaa/touhou_Little.html" target="_blank">東方リトルメイド再現アドオン.V1(まだ配布してません。)[No Download]</a></th>
 <td>東方リトルメイドMODを統合版で再現したアドオンです。しかし遊べる程度なので完成度は低いV.2からなにか来るかも</td>
-<th><a href="./addon/Aaa/touhou_Little_V.1_.mcaddon" download="touhouLittleMADE.mcaddon"><input type="button" value="download"></a></th>
+<th><a href="https://www.mediafire.com/file/z39bmwuttpnfg0h/Touhou+LittleMADE+addon+V.1.mcaddon/file" download="touhouLittleMADE.mcaddon"><input type="button" value="download"></a></th>
 
 </tr>
 <tr><th><a href="./addon/touhou/Komeiji_Koishi.html" target="_blank">Touhou Komeiji Koishi GUI_V1.5.mcpack</a></th>
