--- a/Download.html
+++ b/Download.html
@@ -37,7 +37,7 @@
 <th colspan="2" class="tamidashi">アドオン一覧(2023～)</th>
 </tr>
 <tr>
-<th><a href="./addon/Aaa/touhou_Little.html" target="_blank">東方リトルメイド再現アドオン.V1(まだ配布してません。)[No Download]</a></th>
+<th><a href="./addon/Aaa/touhou_Little.html" target="_blank">東方リトルメイド再現アドオン.V1</a></th>
 <td>東方リトルメイドMODを統合版で再現したアドオンです。しかし遊べる程度なので完成度は低いV.2からなにか来るかも</td>
 <th><a href="https://www.mediafire.com/file/z39bmwuttpnfg0h/Touhou+LittleMADE+addon+V.1.mcaddon/file" download="touhouLittleMADE.mcaddon"><input type="button" value="download"></a></th>
 
