--- a/Download.html
+++ b/Download.html
@@ -49,8 +49,8 @@
 
 <tr>
 <tr><th><a href="./addon/skin/skin.html" target="_blank">Skin change add-on site</a></th>
-<td>skin change addon</td>
-<th><a href="./addon/skin/addon/skin.mcaddon" download="skin.mcaddon"><input type="button" value="download"></a></th>
+<td>skin change addon V1.0.1</td>
+<th><a href="./addon/skin/addon/skin.mcaddon" download="skin_v1.0.1.mcaddon"><input type="button" value="download"></a></th>
 </tr>
 
 <tr>
