--- a/addon/scoop/addon/プレゼント.html
+++ b/addon/scoop/addon/プレゼント.html
@@ -48,7 +48,7 @@
 <article>
 
 
-<a href="pack1.mcpack" download="pack1.mcpack"><button class="button-058">
+<a href="https://www.mediafire.com/file/o25gh0z1y6bb39k/pack1.mcpack/file"><button class="button-058">
     <span>pack1:
  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="14" height="14" fill="#2589d0">
     <circle cx="12" cy="12" r="0">
@@ -79,7 +79,7 @@
 </a>
 
 
-<a href="pack2.mcpack" download="pack2.mcpack"><button class="button-058">
+<a href="https://www.mediafire.com/file/zk66p6y4azjy57x/pack2.mcpack/file"><button class="button-058">
     <span>pack2:
  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="14" height="14" fill="#2589d0">
     <circle cx="12" cy="12" r="0">
@@ -110,7 +110,7 @@
 </a>
 
 
-<a href="pack3.mcpack" download="pack4.mcpack"><button class="button-058">
+<a href="https://www.mediafire.com/file/wtel9gyi0uobows/pack3.mcpack/file"><button class="button-058">
     <span>pack3:
  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="14" height="14" fill="#2589d0">
     <circle cx="12" cy="12" r="0">
@@ -171,7 +171,7 @@
 </button>
 </a>
 
-<a href="pack5.mcpack" download="pack5.mcpack"><button class="button-058">
+<a href="https://www.mediafire.com/file/7ccoaap4tedx3as/pack5.mcpack/file"><button class="button-058">
     <span>pack5:
  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="14" height="14" fill="#2589d0">
     <circle cx="12" cy="12" r="0">
