--- a/Download.html
+++ b/Download.html
@@ -48,15 +48,17 @@
 </tr>
 
 <tr>
-<tr><th><a href="./addon/skin/skin.html" target="_blank">Skin change add-on site</a></th>
+<th><a href="./addon/skin/skin.html" target="_blank">Skin change addon site</a></th>
 <td>skin change addon V1.0.1</td>
 <th><a href="./addon/skin/addon/skin.mcaddon" download="skin_v1.0.1.mcaddon"><input type="button" value="download"></a></th>
 </tr>
 
 <tr>
-<th>no</th>
-<td>NO_file</td>
+<th><a href="./addon/scoop/pack.html" target="_blank">クリスマス:Christmas site</a></th>
+<td>クリスマス:Christmas</td>
+<th><a href="./addon/scoop/addon/プレゼント.html" target="_blank"><input type="button" value="download"></a></th>
 </tr>
+
 <tr>
 <th>no</th>
 <td>NO_file</td>
