--- a/addon/scoop/日本語/index_4.html
+++ b/addon/scoop/日本語/index_4.html
@@ -24,7 +24,7 @@
 
 <header>
 <div id="header_block">
-<div id="site_title"><a href="index_2.html">クリスマスプレゼント(日本語)</a></div>
+<div id="site_title"><a href="https://akaina0809.github.io/dsito/Download.html">クリスマスプレゼント(日本語)</a></div>
 <div id="main_menu">
 <nav>
 <ul>
