--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <title>赫稲サイトです。前のサイトは残しておりますがこちらがメインです。</title>
 <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
 <link rel="stylesheet" type="text/css" href="css/animation_1.css">
+<link rel="stylesheet" type="text/css" href="css/fixing.css">
 
 </head>
 
@@ -34,6 +35,10 @@
 		</ul>
 	</div>
 </div>
+ 
+<fixing>
+<!--タグはここから--><table border="0" cellspacing="0" cellpadding="0"><tr><td align="center"><a href="http://www.rays-counter.com/"><img src="http://www.rays-counter.com/d1275_f10_022/6587094d19b6b/" alt="アクセスカウンター" border="0"></a></td></tr><tr><td align="center"></td></tr></table><!--ここまで-->
+</fixing>
 
 <div id="wrapper">
 
