--- a/addon/skin/skin.html
+++ b/addon/skin/skin.html
@@ -95,7 +95,7 @@
 
 <h1>追加されるスキン変更一覧</h1>
 
-<img src="日本語/png_1.png" witdh=80 height=80 alt="保存されたくない画像" oncontextmenu="return false;" />
+<video width=100% height=100% src="日本語/tesy_2.mp4" autoplay muted loop></video>　
 <img src="日本語/png_2.png" witdh=80 height=80>
 <img src="日本語/png_3.png" witdh=80 height=80>
 <img src="日本語/png_4.png" witdh=80 height=80>
