--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, user-scalable=yes, maximum-scale=1.0, minimum-scale=1.0">
-<meta name="description" content="新:赫稲サイト">
+<meta name="description" content="赫稲サイトです。前のサイトは残しておりますがこちらがメインです。">
 <meta name="keywords" content="">
-<title>赫稲サイトです。前のサイトは残しておりますがこちらがメインです。</title>
+<title>新:赫稲サイト</title>
 <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
 <link rel="stylesheet" type="text/css" href="css/animation_1.css">
 <link rel="stylesheet" type="text/css" href="css/fixing.css">
@@ -36,9 +36,6 @@
 	</div>
 </div>
 	
- <fixing>
-<!--タグはここから--><table border="0" cellspacing="0" cellpadding="0"><tr><td align="center"><a href="http://www.rays-counter.com/"><img src="http://www.rays-counter.com/d1275_f10_022/65870b3067b35/" alt="アクセスカウンター" border="0"></a></td></tr><tr><td align="center"><img src="http://www.rays-counter.com/images/counter_01.gif" border="0"><img src="http://www.rays-counter.com/images/counter_02.gif" border="0"><img src="http://www.rays-counter.com/images/counter_03.gif" border="0" alt=""><img src="http://www.rays-counter.com/images/counter_04.gif" border="0"><img src="http://www.rays-counter.com/images/counter_05.gif" border="0" ></td></tr></table><!--ここまで-->
-</fixing>
 
 <div id="wrapper">
 
@@ -103,7 +100,11 @@ Hello, I'm 赫稲. This site has various reference sites and a template site. No
 		</article>
 	</section>
 </div>
-<div id="footer"></div></div>
+<div id="footer">
+<fixing>
+<!--タグはここから--><table border="0" cellspacing="0" cellpadding="0"><tr><td align="center"><a href="http://www.rays-counter.com/"><img src="http://www.rays-counter.com/d1275_f10_022/65870b3067b35/" alt="アクセスカウンター" border="0"></a></td></tr><tr><td align="center"><img src="http://www.rays-counter.com/images/counter_01.gif" border="0"><img src="http://www.rays-counter.com/images/counter_02.gif" border="0"><img src="http://www.rays-counter.com/images/counter_03.gif" border="0" alt=""><img src="http://www.rays-counter.com/images/counter_04.gif" border="0"><img src="http://www.rays-counter.com/images/counter_05.gif" border="0" ></td></tr></table><!--ここまで-->
+</fixing>
+</div></div>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script src="js/animation_1.js"></script>
 <script src="js/html5.js"></script>
