--- a/Download.html
+++ b/Download.html
@@ -61,7 +61,8 @@
 
 <tr>
 <th>no</th>
-<td><a href="download_count/download.php?download=1">ダウンロードはこちら</a><p class="download_count">総ダウンロード数：2（<span class="count_today">Today:2</span> <span class="count_yesterday">Yesterday:0</span>）</p></td>
+<td><div onclick="incrementClick()">Click Me</div></td>
+  <center><h3 id="counter-label">0</h3></center>
 </tr>
 <tr>
 <th>no</th>
@@ -92,7 +93,7 @@
 <!--自作のJS-->
 <script src="js/animation_0.js"></script>
 <script src="js/count.js"></script>
-<script type="text/javascript" src="download_count/download.php?dsp_count=1"></script>
+<script src="download_count/caunt.js"></script>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 
