--- a/Download.html
+++ b/Download.html
@@ -61,8 +61,8 @@
 
 <tr>
 <th>no</th>
-<td><div onclick="incrementClick()">Click Me</div></td>
-  <center><h3 id="counter-label">0</h3></center>
+<td><a href="" target="_blank"><input type="button" value="download"><div onclick="incrementClick()">Click Me</div></a></td>
+<th><center><h3 id="counter-label">0</h3></center></th>
 </tr>
 <tr>
 <th>no</th>
