--- a/Download.html
+++ b/Download.html
@@ -44,7 +44,7 @@
 </tr>
 <tr><th><a href="./addon/touhou/Komeiji_Koishi.html" target="_blank">Touhou Komeiji Koishi GUI_V1.5.mcpack</a></th>
 <td>Touhou Komeiji Koishi GUI V1.5</td>
-<th><a href="./addon/touhou/Touhou_Komeiji_Koishi_GUI.mcpack" download="Touhou_Komeiji_Koishi_GUI_V1.5.mcpack"><input type="button" value="download"></a></th>
+<th><a href="./addon/touhou/Touhou_Komeiji_Koishi_GUI.mcpack" download="Touhou_Komeiji_Koishi_GUI_V1.5.mcpack"><input type="button" id="countButton2" value="ぼたん2"><count2></count2></a></th>
 </tr>
 
 <tr>
