--- a/Download.html
+++ b/Download.html
@@ -39,12 +39,12 @@
 <tr>
 <th><a href="./addon/Aaa/touhou_Little.html" target="_blank">東方リトルメイド再現アドオン.V1</a></th>
 <td>東方リトルメイドMODを統合版で再現したアドオンです。しかし遊べる程度なので完成度は低いV.2からなにか来るかも</td>
-<th><a href="https://www.mediafire.com/file/z39bmwuttpnfg0h/Touhou+LittleMADE+addon+V.1.mcaddon/file" download="touhouLittleMADE.mcaddon"><input type="button" id="countButton" value="ぼたん"><count></count></a></th>
+<th><a href="https://www.mediafire.com/file/z39bmwuttpnfg0h/Touhou+LittleMADE+addon+V.1.mcaddon/file" download="touhouLittleMADE.mcaddon"><input type="button" id="countButton" value="download:"><count></count></a></th>
 
 </tr>
 <tr><th><a href="./addon/touhou/Komeiji_Koishi.html" target="_blank">Touhou Komeiji Koishi GUI_V1.5.mcpack</a></th>
 <td>Touhou Komeiji Koishi GUI V1.5</td>
-<th><a href="./addon/touhou/Touhou_Komeiji_Koishi_GUI.mcpack" download="Touhou_Komeiji_Koishi_GUI_V1.5.mcpack"><input type="button" id="countButton2" value="ぼたん2"><count2></count2></a></th>
+<th><a href="./addon/touhou/Touhou_Komeiji_Koishi_GUI.mcpack" download="Touhou_Komeiji_Koishi_GUI_V1.5.mcpack"><input type="button" id="countButton2" value="download:"><count2></count2></a></th>
 </tr>
 
 <tr>
