--- a/Download.html
+++ b/Download.html
@@ -39,7 +39,7 @@
 <tr>
 <th><a href="./addon/Aaa/touhou_Little.html" target="_blank">東方リトルメイド再現アドオン.V1</a></th>
 <td>東方リトルメイドMODを統合版で再現したアドオンです。しかし遊べる程度なので完成度は低いV.2からなにか来るかも</td>
-<th><test class="button-4"><a href="https://www.mediafire.com/file/z39bmwuttpnfg0h/Touhou+LittleMADE+addon+V.1.mcaddon/file" download="touhouLittleMADE.mcaddon"><input id="countButton" value="download"><count></count></a></test></th>
+<th><test class="button-4"><a href="https://www.mediafire.com/file/z39bmwuttpnfg0h/Touhou+LittleMADE+addon+V.1.mcaddon/file" download="touhouLittleMADE.mcaddon" id="countButton" value="download"><input><count></count></a></test></th>
 
 </tr>
 <tr><th><a href="./addon/touhou/Komeiji_Koishi.html" target="_blank">Touhou Komeiji Koishi GUI_V1.5.mcpack</a></th>
