--- a/Download.html
+++ b/Download.html
@@ -50,19 +50,19 @@
 <tr>
 <th><a href="./addon/skin/skin.html" target="_blank">Skin change addon site</a></th>
 <td>skin change addon V2.0.1</td>
-<th><a href="./addon/skin/addon/skin.mcaddon" download="skin_v2.0.1.mcaddon"><input type="button" value="download"></a></th>
+<th><a href="./addon/skin/addon/skin.mcaddon" download="skin_v2.0.1.mcaddon"><input type="button" id="countButton3" value="download">:<count3></count3></a></th>
 </tr>
 
 <tr>
 <th><a href="./addon/scoop/pack.html" target="_blank">クリスマス:Christmas site</a></th>
 <td>クリスマス:Christmas</td>
-<th><a href="./addon/scoop/addon/プレゼント.html" target="_blank"><input type="button" value="download"></a></th>
+<th><a href="./addon/scoop/addon/プレゼント.html" target="_blank"><input type="button" id="countButton4" value="download">:<count4></count4></a></th>
 </tr>
 
 <tr>
 <th>no</th>
-<td><a href="" target="_blank"><input type="button" value="download"><div onclick="incrementClick()">Click Me</div></a></td>
-<th><center><h3 id="counter-label">0</h3></center></th>
+<td></td>
+<th></th>
 </tr>
 <tr>
 <th>no</th>
