--- a/osirase.html
+++ b/osirase.html
@@ -38,6 +38,19 @@
 </div>
 </section>
 </li>
+	
+<li>
+<section>
+<h3 class="title">2024/01/11</h3>
+<div class="box">
+<p>ダウンロード数をカウントできるように変更</p>
+<p>Changed to be able to count the number of downloads.</p>
+<p>ダウンロード数をカウントの数字を見やすく表示</p>
+<p>Display numbers in an easy-to-read manner.</p>
+</div>
+</section>
+</li>
+	
 </ul>
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
